feat: perform MFSD loading in background